conclude availability rules
